@startuml

' --- Estilos ---
skinparam class {
    BackgroundColor White
    ArrowColor Black
    BorderColor Black
}

' --- Classes Relevantes ---
abstract class Usuario {
    # matricula : string
    # nome : string
    # email : string
    # senha : string
    # unidade : Unidade
    # precisa_redefinir_senha : bool
}

class Aluno extends Usuario {
    - cpf : string
    - is_ativo : bool
    - periodo : Periodo
    - curso : FK<Curso>
    - grade : M2M<Horarios>
}

class Curso {
    - id : int
    - nome : string
    - areaId : FK<Area>
}

enum Periodo {
    PRIMEIRO, SEGUNDO, TERCEIRO, QUARTO, QUINTO, SEXTO, SETIMO, OITAVO, NONO, DECIMO
}

class Processo {
    - id : int
    - nome_empresa : string
    - data_criacao : Date
    - status : StatusProcesso
    - aluno : FK<Aluno>
    - coordenacao : FK<Coordenador>
    - secretaria : FK<Secretaria>
    - criado_por : string
    + nome_processo() : string
}

class Contrato {
    - id : int
    - arquivo : string
    - data_upload : Date
    - cnpj_empresa : string
    - nome_empresa : string
    - data_inicio : Date
    - data_termino : Date
    - apolice_seguro : string
    - plano_atividade : bool
    - horarios_atividade : M2M<Horarios>
    - assinatura_aluno : bool
    - assinatura_empresa : bool
    - assinatura_faculdade : bool
    - processoId : FK<Processo>
    - status : StatusContrato
    + nome_contrato() : string
}

class Relatorio {
    - id : int
    - processo_id : FK<Processo>
    - arquivo : string
    - data_upload : Date
    - horas_trabalhadas : int
    - data_inicio : Date
    - data_termino : Date
    - status : StatusRelatorio
}

class Horarios {
    - id : int
    - turno : Turno
    - dia : DiasDaSemana
}

' --- Relacionamentos ---
Aluno "0..*" -- "1" Curso
Aluno "0..*" -- "1" Periodo
Aluno "0..*" -- "0..*" Horarios : grade >
Aluno "1" -- "0..1" Processo : possui >
Processo "1" *-- "1..*" Contrato : contém >
Processo "1" *-- "0..*" Relatorio : contém >
Contrato "0..*" -- "0..*" Horarios : horarios_atividade >

@enduml
